Introduce basic support for Vector API